--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -2,24 +2,7 @@
     <h2>新增电影</h2>
 
     <hr>
-    <%= form_for @movie do |f| %>
-    <% if @movie.errors.any? %>
-    <ul>
-      <% @movie.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-    </ul>
-    <% end %>
+    <%= render "form" %>
 
-    名称
-    <%= f.text_field :name %>
-    <br>
-    叙述
-    <br>
-    <%= f.text_area :description %>
-    <br>
-
-    <%= f.submit "Submit", :disable_with => 'Submiting...' %>
-    <% end %>
 
 </div>
