--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -19,9 +19,11 @@
           <td><%= movie.description %></td>
           <td><%= movie.user.email %></td>
           <td>
+              <% if current_user && current_user == movie.user %>
               <%= link_to("Edit", edit_movie_path(movie), class: "btn btn-sm btn-default")%>
               <%= link_to("Delete", movie_path(movie),    class: "btn btn-sm btn-default",
                           method: :delete, data: { confirm: "Are you sure?" } )%>
+              <% end %>
           </td>
         </tr>
       <% end %>
