--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,6 +1,8 @@
 <div class="col-md-12">
   <div class="movie">
-    <%= link_to("Edit", edit_movie_path(@movie), class: "btn btn-primary pull-right")%>
+    <% if current_user && current_user == @group.user %>
+      <%= link_to("Edit", edit_movie_path(@movie), class: "btn btn-primary pull-right")%>
+    <% end %>
   </div>
   <h2><%= @movie.name %></h2>
   <p><%= @movie.description %></p>
