--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,6 +1,7 @@
 <div class="col-md-12">
   <div class="movie">
-    <% if current_user && current_user == @group.user %>
+    <%= link_to("Write a review", new_movie_review_path(@movie), class: "btn btn default pull-right") %>
+    <% if current_user && current_user == @movie.user %>
       <%= link_to("Edit", edit_movie_path(@movie), class: "btn btn-primary pull-right")%>
     <% end %>
   </div>
