--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,5 +1,12 @@
 <div class="col-md-12">
   <div class="movie">
+    <span class="pull-right">
+      <% if current_user && current_user.is_fan_of?(@movie) %>
+        <label class="label label-success"> 喜欢 </label>
+      <% else %>
+        <label class="label label-warning"> 不喜欢 </label>
+      <% end %>
+    </span>
     <%= link_to("Write a review", new_movie_review_path(@movie), class: "btn btn default pull-right") %>
     <% if current_user && current_user == @movie.user %>
       <%= link_to("Edit", edit_movie_path(@movie), class: "btn btn-primary pull-right")%>
