--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -18,7 +18,10 @@
                     <b class="caret"></b>
                   </a>
                   <ul class="dropdown-menu">
+                    <li> <%= link_to("My Movies", account_movies_path) %> </li>
+                    <li class="divider"> </li>
                     <li> <%= link_to("退出", destroy_user_session_path, method: :delete) %> </li>
+
                   </ul>
                 </li>
               <% end %>
