render partial with collection

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -12,21 +12,7 @@
       </tr>
     </thead>
     <tbody>
-      <% @movies.each do |movie| %>
-        <tr>
-          <td>#</td>
-          <td><%= link_to(movie.name, movie_path(movie)) %></td>
-          <td><%= simple_format(movie.description) %></td>
-          <td><%= movie.user.email %></td>
-          <td>
-              <% if current_user && current_user == movie.user %>
-              <%= link_to("Edit", edit_movie_path(movie), class: "btn btn-sm btn-default")%>
-              <%= link_to("Delete", movie_path(movie),    class: "btn btn-sm btn-default",
-                          method: :delete, data: { confirm: "Are you sure?" } )%>
-              <% end %>
-          </td>
-        </tr>
-      <% end %>
+      <%= render :partial => "movie_item", :collection => @movies, :as => :movie %>
     </tbody>
   </table>
 </div>
